--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -122,6 +122,12 @@
     <Compile Include="Forms\FormInvokeProgress.Designer.cs">
       <DependentUpon>FormInvokeProgress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormLib.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormLib.Designer.cs">
+      <DependentUpon>FormLib.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormInvokeProgress.resx">
       <DependentUpon>FormInvokeProgress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormLib.resx">
+      <DependentUpon>FormLib.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSettings.resx">
       <DependentUpon>FormSettings.cs</DependentUpon>
