--- a/TPR_ExampleView/TPR_ExampleView.csproj
+++ b/TPR_ExampleView/TPR_ExampleView.csproj
@@ -72,6 +72,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -182,6 +183,7 @@
     <Compile Include="Forms\ImgName.cs" />
     <Compile Include="MenuMethod.cs" />
     <Compile Include="MyMethodInfo.cs" />
+    <Compile Include="MySettingProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Controls\ProgressInfoControl.cs">
       <SubType>UserControl</SubType>
